--- a/style/reset.css
+++ b/style/reset.css
@@ -127,21 +127,13 @@ a {
   color: black;
 }
 
-.display--colJystifyCenter {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.display--rowJystifyCenter {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
 button {
   border: none;
   background-color: transparent;
   outline: none;
   cursor: pointer;
+  padding: 0;
+}
+input {
+  padding: 0;
 }
